--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
     "build:types": "tsc --emitDeclarationOnly",
     "build:js": "babel src --out-dir dist --extensions \".ts,.tsx\" --source-maps inline",
     "build.all": "npm run build.prod && npm run build.esnext",
-    "test": "karma start karma.config.js"
+    "test": "karma start karma.config.js",
+    "check": "gts check",
+    "clean": "gts clean",
+    "compile": "tsc",
+    "fix": "gts fix",
+    "prepare": "npm run compile",
+    "pretest": "npm run compile",
+    "posttest": "npm run check"
   },
   "keywords": [
     "webpack",
@@ -22,7 +29,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jasmine": "2.8.7",
-    "@types/node": "7.0.0",
+    "@types/node": "^13.11.1",
     "awesome-typescript-loader": "5.2.0",
     "jasmine-core": "3.1.0",
     "karma": "2.0.4",
@@ -32,7 +39,7 @@
     "source-map-loader": "0.2.3",
     "tslint": "5.17.0",
     "tslint-loader": "3.6.0",
-    "typescript": "3.5.1",
+    "typescript": "^3.8.3",
     "webpack": "4.12.0",
     "webpack-cli": "3.0.8",
     "webpack-dev-server": "3.1.4",
@@ -41,6 +48,7 @@
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
     "@babel/preset-env": "^7.4.1",
-    "@babel/preset-typescript": "^7.3.3"
+    "@babel/preset-typescript": "^7.3.3",
+    "gts": "^2.0.2"
   }
 }
